istio/sandwiches.yaml
##################################################################################################
# Ingredients service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ingredients
  labels:
    app: ingredients
    service: ingredients
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ingredients
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredients-v1
  labels:
    app: ingredients
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingredients
      version: v1
  template:
    metadata:
      labels:
        app: ingredients
        version: v1
    spec:
      containers:
      - name: ingredients
        image: calvinmclean/sandwiches-ingredients:v1
        ports:
        - containerPort: 8080
---
#################################################################################################
# Recipes service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: recipes
  labels:
    app: recipes
    service: recipes
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: recipes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-v1
  labels:
    app: recipes
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
      version: v1
  template:
    metadata:
      labels:
        app: recipes
        version: v1
    spec:
      containers:
      - name: recipes
        image: calvinmclean/sandwiches-recipes:v1
        ports:
        - containerPort: 8080
---
##################################################################################################
# Menu service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: menu
  labels:
    app: menu
    service: menu
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: menu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-v1
  labels:
    app: menu
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu
      version: v1
  template:
    metadata:
      labels:
        app: menu
        version: v1
    spec:
      containers:
      - name: menu
        image: calvinmclean/sandwiches-menu:v1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-v2
  labels:
    app: menu
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu
      version: v2
  template:
    metadata:
      labels:
        app: menu
        version: v2
    spec:
      containers:
      - name: menu
        image: calvinmclean/sandwiches-menu:v2
        ports:
        - containerPort: 8080
---
##################################################################################################
# Clerk service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: clerk
  labels:
    app: clerk
    service: clerk
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: clerk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clerk-v1
  labels:
    app: clerk
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clerk
      version: v1
  template:
    metadata:
      labels:
        app: clerk
        version: v1
    spec:
      containers:
      - name: clerk
        image: calvinmclean/sandwiches-clerk:v1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clerk-v2
  labels:
    app: clerk
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clerk
      version: v2
  template:
    metadata:
      labels:
        app: clerk
        version: v2
    spec:
      containers:
      - name: clerk
        image: calvinmclean/sandwiches-clerk:v2
        ports:
        - containerPort: 8080
---
