istio/vs-clerk-30-70.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clerk
spec:
  hosts:
  - "*"
  gateways:
  - sandwiches-gateway
  http:
  - match:
    - uri:
        prefix: /clerk
    route:
    - destination:
        host: clerk
        subset: v1
      weight: 30
    - destination:
        host: clerk
        subset: v2
      weight: 70
