istio/vs-clerk-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clerk
spec:
  hosts:
  - "*"
  gateways:
  - sandwiches-gateway
  http:
  - match:
    - uri:
        prefix: /clerk
    route:
    - destination:
        host: clerk
        port:
          number: 8080
        subset: v2
