istio/vs-menu-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: menu
spec:
  hosts:
  - "*"
  gateways:
  - sandwiches-gateway
  http:
  - match:
    - uri:
        prefix: /menu
    route:
    - destination:
        host: menu
        port:
          number: 8080
        subset: v2
